--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
           <h2>О нас<br><i aria-hidden="true" class="fa fa-chevron-down"></i></h2></a></div>
       <div class="parallax-window">
         <div class="container">
-          <p>Мы молодая группа дизайнеров и программистов, у нас нет директора, замдиректора, секретаря и мы не снимаем офис, поэтому у нас ДЁШЕВО! Вы заказываете нам сайт или Landing Page...</p>
+          <p>Мы молодая группа профессиональных дизайнеров и программистов в области веб-технологий. Являемся энтузиастами своего дела. Работы выполняем не позже оговоренных сроков. Качество и изящность - кредо нашего коллектива. А цены за наши услуги Вас приятно удивят и порадуют...</p>
         </div>
       </div>
     </section>
@@ -35,12 +35,28 @@
           <h2>Услуги и цены<br><i aria-hidden="true" class="fa fa-chevron-down"></i></h2></a></div>
       <div class="parallax-window">
         <div class="container">
-          <ul>
-            <li>Продвижение сайта по позициям</li>
-            <li>Продвижение сайтов с оплатой за результат</li>
-            <li>Продвижение сайта с оплатой за трафик</li>
-            <li>Поисковая оптимизация сайтов</li>
-          </ul>
+          <table class="table">
+            <tr>
+              <td>Создать сайт визитку</td>
+              <td>От 2 000 р.</td>
+            </tr>
+            <tr>
+              <td>Создать Landing Page</td>
+              <td>От 5 000 р.</td>
+            </tr>
+            <tr>
+              <td>Создать Интернет магазин</td>
+              <td>От 10 000 р.</td>
+            </tr>
+            <tr>
+              <td>Сео-оптимизация контента (разово)</td>
+              <td>От 5 000 р.</td>
+            </tr>
+            <tr>
+              <td>Рекламная компания (продвижение)</td>
+              <td>От 5 000 р. / мес.</td>
+            </tr>
+          </table>
         </div>
       </div>
     </section>
@@ -52,26 +68,16 @@
           <div data-width="100%" data-nav="false" data-ratio="800/470" data-loop="true" class="fotorama">
             <div class="slide">
               <div class="row">
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
+                <div class="col-xs-6"><img src="img/portfolio/1.jpg"></div>
+                <div class="col-xs-6"><img src="img/portfolio/2.jpg"></div>
+                <div class="col-xs-6"><img src="img/portfolio/3.jpg"></div>
+                <div class="col-xs-6"><img src="img/portfolio/4.jpg"></div>
               </div>
             </div>
             <div class="slide">
               <div class="row">
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="row">
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
-                <div class="col-xs-6"><img src="http://lorempixel.com/400/400/"></div>
+                <div class="col-xs-6"><img src="img/portfolio/5.jpg"></div>
+                <div class="col-xs-6"><img src="img/portfolio/6.jpg"></div>
               </div>
             </div>
           </div>
@@ -82,35 +88,37 @@
       <div class="container"><a id="kontakty">
           <h2>Контакты<br><i aria-hidden="true" class="fa fa-chevron-down"></i></h2></a></div>
       <div class="parallax-window">
-        <h3>Обратная связь</h3>
-        <form>
-          <input type="text" placeholder="Имя"><br>
-          <input type="email" placeholder="Почта"><br>
-          <input type="text" placeholder="Имя"><br>
-          <textarea placeholder="Сообщение"></textarea><br>
-          <input type="submit" value="Отправить">
-        </form>
-        <div class="adres-phone">
-          <p>
-            Телефоны:<br>
-            8-977-333-55-30<br>
-            8-977-333-55-25
-          </p>
-          <p>
-            Почта:<br>
-            email@mail.ru
-          </p>
-          <p>
-            Skype:<br>
-            skype777
-          </p>
-          <p>
-            Адресс:<br>
-            г. Москва, ул. Пушкина, д. Колотушкина
-          </p>
-        </div>
-        <div class="karta">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.37294994423!2d37.61531071560142!3d55.75202328055311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a50b315e573%3A0xa886bf5a3d9b2e68!2z0JzQvtGB0LrQvtCy0YHQutC40Lkg0JrRgNC10LzQu9GM!5e0!3m2!1sru!2sru!4v1496798764112" width="400" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+        <div class="container">
+          <h3>Обратная связь</h3>
+          <form>
+            <input type="text" placeholder="Имя"><br>
+            <input type="email" placeholder="Почта"><br>
+            <input type="text" placeholder="Телефон"><br>
+            <textarea placeholder="Сообщение"></textarea><br>
+            <input type="submit" value="Отправить">
+          </form>
+          <div class="adres-phone">
+            <p>
+              Телефоны:<br>
+              8-977-333-55-30<br>
+              8-977-333-55-25
+            </p>
+            <p>
+              Почта:<br>
+              mail@color-space.ru
+            </p>
+            <p>
+              Skype:<br>
+              color-space
+            </p>
+            <p>
+              Адрес:<br>
+              г. Москва, ул. Савельева, д. 7
+            </p>
+          </div>
+          <div class="karta">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.37294994423!2d37.61531071560142!3d55.75202328055311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a50b315e573%3A0xa886bf5a3d9b2e68!2z0JzQvtGB0LrQvtCy0YHQutC40Lkg0JrRgNC10LzQu9GM!5e0!3m2!1sru!2sru!4v1496798764112" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </section>
